--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,3 +27,101 @@
     font-weight: bold;
     color: #ffffff;
 }
+
+*{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+.container{
+    margin: 0 auto;
+    width: 824px;
+    background-color: #ccc;
+    border: 1px solid #000;
+
+}
+
+.header{
+    background-color: #4d4d4d;
+    border-bottom: 1px solid #000;
+    border-top: 1px solid #000;
+}
+
+.center-area{
+    width: 600px;
+    height: 400px;
+    margin: 0 auto;
+    background-color: #005f5f;
+    border: 1px solid #444;
+}
+.clear{
+    clear: both;
+}
+.footer{
+    bottom: 0;
+    height: 25px;
+    background-color: #4d4d4d;
+    border-top: 1px solid #000;
+    text-align: center;
+    text-decoration: none;
+}
+
+/* header menü */
+.nav ul {
+    list-style: none;
+    background-color: #444;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+  }
+  .nav li {
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.2em;
+    border-bottom: 1px solid #888;
+    width: 150px;
+  }
+   
+  .nav a {
+    text-decoration: none;
+    color: #fff;
+    display: block;
+    transition: .3s background-color;
+  }
+   
+  .nav a:hover {
+    background-color: #005f5f;
+  }
+   
+  .nav a.active {
+    background-color: #fff;
+    color: #444;
+    cursor: default;
+  }
+  @media screen and (min-width: 600px) {
+    .nav li {
+      width: 270px;
+      border-bottom: none;
+      height: 50px;
+      line-height: 50px;
+      font-size: 1.4em;
+    }
+   
+    /* Option 1 - Display Inline */
+    .nav li {
+      display: inline-block;
+    }
+   
+    /* Options 2 - Float
+    .nav li {
+      float: left;
+    }
+    .nav ul {
+      overflow: auto;
+      width: 600px;
+      margin: 0 auto;
+    }
+    .nav {
+      background-color: #444;
+    }
+    */
+  }
+  /* header menü */
