--- a/views/talebimi-goruntule.hbs
+++ b/views/talebimi-goruntule.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.css">
-    <title>Sorun Oluştur</title>
+    <title>Hizmet Oluştur</title>
 </head>
 <body>
     <div class="container">
@@ -28,8 +28,8 @@
                <div class="area-1-right">
                     <div class="area-1-select">
                         <select name="" id="">
-                            <option value="Sorun 1" selected>Sorun 1</option>
-                            <option value="Sorun 2">Sorun 2</option>
+                            <option value="Hizmet İsteği 1" selected>Hizmet İsteği 1</option>
+                            <option value="Hizmet İsteği 2">Hizmet İsteği 2</option>
                         </select>
                         </div>
                     <div class="clear"></div>
@@ -50,7 +50,7 @@
                 <textarea name=""></textarea>
             </div>
              <div class="center-area-4">
-                <button type="submit">Bir sorun bildir</button>
+                <button type="submit">Hizmet isteği oluştur</button>
             </div>
          </div>
           <div class="clear"></div>
