--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,18 @@
     font-size: 16px;
     font-style: normal;
 }
+a:link {
+    text-decoration: none;
+}
+a:visited {
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: none;
+}
+a:active {
+    text-decoration: none;
+}
 .container{
     margin: 0 auto;
     width: 824px;
@@ -175,6 +187,13 @@
     margin-bottom: 10px;
 }
 
+.center-area-talep{
+    margin:0px auto;
+    width: 450px;
+    height: 500px;
+    background-color: #fff;
+}
+
 .center-area-2{
     margin:25px auto;
     width: 500px;
@@ -205,9 +224,65 @@
     width: 505px;
     height: 100%;
 }
+
+.area-talep-title{
+    width:448px;
+    height:50px;
+    border: 1px solid #000;
+    color: #000;
+    text-align: center;
+    padding-top:30px;
+}
+
+.area-talepler{
+    width:448px;
+    height:80px;
+    background-color: #fff;
+    border: 1px solid #000;
+}
+
+.area-talepler-text{
+    width:170px;
+    height: 16px;
+    background-color: #fff;
+    color:#000;
+    margin-top:30px;
+    margin-left: 20px;
+}
+
+
+.area-talep-title > a {
+    color: #000;
+}
+.area-talepler-text > a{
+    color: #000;
+}
+.area-talepler-type{
+    height: 16px;
+    background-color: #fff;
+    color:#000;
+    margin-left:200px;
+    margin-top:-16px;
+    float: left;
+}
+.area-talepler-edit{
+    background-color: #fff;
+    color:#000;
+    margin-right:15px;;
+    margin-top:-38px;
+    float: right;
+    overflow: hidden;
+    height: 65px;
+}
+.area-talepler-edit > a > img{
+    width: 100%;
+    height: 100%;
+}
+
 .clear{
     clear: both;
 }
+
 .footer{
     bottom: 0;
     height: 25px;
