--- a/views/talebimi-goruntule.hbs
+++ b/views/talebimi-goruntule.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.css">
-    <title>Hizmet Oluştur</title>
+    <title>Talebimi Görüntüle</title>
 </head>
 <body>
     <div class="container">
@@ -46,8 +46,11 @@
                 <input type="text" name="subject" placeholder="Konu...">
             </div>
             <div class="clear"></div>
-            <div class="center-area-3">
-                <textarea name=""></textarea>
+            <div class="center-area-taleplerimi-goruntule">
+                <textarea name="">Sorun içeriği</textarea>
+            </div>
+            <div class="center-area-taleplerimi-goruntule">
+                <textarea name="">Çözüm içeriği</textarea>
             </div>
              <div class="center-area-4">
                 <button type="submit">Hizmet isteği oluştur</button>
