--- a/views/admin-home.hbs
+++ b/views/admin-home.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Günlük yapılması gereken taleplerim</title>
+    <title>Admin - Anasayfa</title>
      <link rel="stylesheet" href="assets/css/style-2.css">
 </head>
 <body>
@@ -16,17 +16,19 @@
                     <form class="form-wrapper cf">
                         <input type="search" placeholder="Aranacak Metin..." required>
                     </form></a></li>
-                <li class="tutorials"><a href="/teknisyen-home">Site Logo</a></li>
+                <li class="tutorials"><a href="/admin-home">Site Logo</a></li>
                 <li class="about"><a href="/cikis">Çıkış Yap</a></li>
             </ul>
          </div>
          <div class="center-area">
-            <a href="/gunluk-yapilmasi-gereken-taleplerim"> <div class="box1">Günlük yapılması gereken taleplerim</div></a>
-                 <a href=""><div class="ist" >Talepler 1 <div class="cop"><img width="25" height="25" src="assets/img/edt.jpg" /><div class="cop"><img width="25" height="25" src="assets/img/cop.jpg" /></div></div></div></a>
-                 <a href="#"><div class="ist" >Talepler 2 <div class="cop"><img width="25" height="25" src="assets/img/edt.jpg" /><div class="cop"><img width="25" height="25" src="assets/img/cop.jpg" /></div></div></div></a>
-              
-         
+                 <div class="adminana"><a href="/kullanici-ayarlari">Kullanıcı Ayarları</a> </div>
+                 <div class="adminana"><a href="/envanterler">Envanterler </a> </div>
+                 <div class="adminana"><a href="/talepler">Talepler</a> </div>
+                 <div class="adminana"><a href="/site-ayarlari">Site Ayarları </a> </div>
+                 <div class="adminana"><a href="/raporlar">Raporlar </a></div>
+                 <div class="adminana1">Hoş geldin patron..ani bir durum olursa sana buradan
+bilgiler vereceğim.. </div>
+<div class="ft"> Copyrights - 2019 | IntTechProje</div>
          </div>
-    
-</body>
+</body
 </html>
