--- a/views/taleplerim.hbs
+++ b/views/taleplerim.hbs
@@ -20,7 +20,7 @@
          </div>
          <div class="center-area">
             <div class="center-area-talep">
-                <div class="area-talep-title"><a href="taleplerim">Taleplerim</a></div>
+                <div class="area-talep-title"><a href="/taleplerim">Taleplerim</a></div>
                 <div class="area-talepler">
                     <div class="area-talepler-text"><a href="talep-open">Talep 1</a></div>
                     <div class="area-talepler-type">Durum: Çözüldü</div>
