--- a/views/envanter-raporlari.hbs
+++ b/views/envanter-raporlari.hbs
@@ -6,28 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.css">
-    <title>Raporlar</title>
+    <title>Envanter Raporları</title>
 </head>
 <body>
     <div class="container">
       <div class="header">
           <div class="nav">
             <ul>
-                <li class="home"><a href="/admin-home">Anasayfaya geri dön</a></li>
+                <li class="home"><a href="/raporlar">Raporlara geri dön</a></li>
                 <li class="tutorials"><a href="/admin-home">Site Logo</a></li>
                 <li class="about"><a href="/cikis">Çıkış Yap</a></li>
             </ul>
          </div>
          <div class="center-area">
             <div class="global-pages">
-                <div class="global-pages-div"><a href="/kullanici-raporlari">Kullanıcı Raporları</a>
-                    <div class="global-pages-div-img"><a href="/kullanici-raporlarir"><img src="assets/img/leftArrow.png" alt=""></a></div>
+                <a href="/envanter-raporlari"><div class="global-pages-title">Envanter Raporları</div></a>
+                
+                <div class="global-pages-div"><a href="/stok-envanterler">Stok Envanter</a>
+                    <div class="global-pages-div-right"><a href="/stok-envanterler">2</a></div>
                 </div>
-                <div class="global-pages-div"><a href="/envanter-raporlari">Envanter Raporları</a>
-                    <div class="global-pages-div-img"><a href="/envanter-raporlari"><img src="assets/img/leftArrow.png" alt=""></a></div>
+                <div class="global-pages-div"><a href="/kullanimda-olan-envanterler">Kullanımda olan Envanterler</a>
+                    <div class="global-pages-div-right"><a href="/kullanimda-olan-envanterler">4</a></div>
                 </div>
-                <div class="global-pages-div"><a href="/teknisyen-raporlari">Teknisyen Raporları</a>
-                    <div class="global-pages-div-img"><a href="/teknisyen-raporlari"><img src="assets/img/leftArrow.png" alt=""></a></div>
+                <div class="global-pages-div"><a href="/tum-envanterler">Tüm Envanterler</a>
+                    <div class="global-pages-div-right"><a href="/tum-envanterler">5</a></div>
                 </div>
             </div>
          </div>
