--- a/views/teknisyen-raporlari.hbs
+++ b/views/teknisyen-raporlari.hbs
@@ -6,29 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.css">
-    <title>Raporlar</title>
+    <title>Teknisyen Raporları</title>
 </head>
 <body>
     <div class="container">
       <div class="header">
           <div class="nav">
             <ul>
-                <li class="home"><a href="/admin-home">Anasayfaya geri dön</a></li>
+                <li class="home"><a href="/raporlar">Raporlara geri dön</a></li>
                 <li class="tutorials"><a href="/admin-home">Site Logo</a></li>
                 <li class="about"><a href="/cikis">Çıkış Yap</a></li>
             </ul>
          </div>
          <div class="center-area">
             <div class="global-pages">
-                <div class="global-pages-div"><a href="/kullanici-raporlari">Kullanıcı Raporları</a>
-                    <div class="global-pages-div-img"><a href="/kullanici-raporlarir"><img src="assets/img/leftArrow.png" alt=""></a></div>
+                <a href="/teknisyen-raporlari"><div class="global-pages-title">Teknisyen Raporları</div></a>
+                <div class="global-pages-div"><a href="/tum-teknisyenler">Tüm Teknisyenler</a>
+                <div class="global-pages-div-right"><a href="/tum-teknisyenler">4</a></div>
                 </div>
-                <div class="global-pages-div"><a href="/envanter-raporlari">Envanter Raporları</a>
-                    <div class="global-pages-div-img"><a href="/envanter-raporlari"><img src="assets/img/leftArrow.png" alt=""></a></div>
-                </div>
-                <div class="global-pages-div"><a href="/teknisyen-raporlari">Teknisyen Raporları</a>
-                    <div class="global-pages-div-img"><a href="/teknisyen-raporlari"><img src="assets/img/leftArrow.png" alt=""></a></div>
-                </div>
+              <div class="global-pages-div"><a href="/en-cok-istek-kapatan-teknisyenler">En Çok İstek Kapatan Teknisyenler</a>
+              <div class="global-pages-div-right"><a href="/en-cok-istek-kapatan-teknisyenler">3</a></div>
+              </div>
             </div>
          </div>
           <div class="clear"></div>
