--- a/public/css/style.css
+++ b/public/css/style.css
@@ -315,6 +315,61 @@ a:active {
     margin-top: 2px;
 }
 
+.global-pages{
+    width: 400px;
+    background-color: #fff;
+    margin:0px auto;
+    height: 500px;
+}
+.global-pages-title{
+    width: 390px;
+    background-color: #aaa;
+    margin:5px;
+    height: 60px;
+    float: left;
+    text-align: center;
+    padding-top:40px;
+}
+.global-pages-div{
+    width: 385px;
+    background-color: #aaa;
+    margin:5px;
+    height: 40px;
+    float: left;
+    text-align: left;
+    padding-top:20px;
+    padding-left: 5px;
+}
+
+.global-pages-div-right{
+    float:right;
+    margin-right: 0px;
+    margin-top: -20px;
+    border: 1px solid #ccc;
+    width:100px;
+    height:38px;
+    padding-left: 5px;
+    padding-top: 20px;
+    text-align: center;
+    
+}
+
+.global-pages-div-img{
+    float:right;
+    margin-right: 0px;
+    margin-top: -20px;
+    border: 1px solid #ccc;
+    width:100px;
+    height:58px;
+    
+}
+
+.global-pages-div-img > a > img{
+    width: 100%;
+    height: 100%;
+    
+}
+
 .footer{
     bottom: 0;
     height: 25px;
