--- a/views/tum-envanterler.hbs
+++ b/views/tum-envanterler.hbs
@@ -6,27 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.css">
-    <title>Kullanıcı Raporları</title>
+    <title>Tüm Envanterler</title>
 </head>
 <body>
     <div class="container">
       <div class="header">
           <div class="nav">
             <ul>
-                <li class="home"><a href="/raporlar">Raporlara geri dön</a></li>
+                <li class="home"><a href="/envanter-raporlari">Envanter Raporları</a></li>
                 <li class="tutorials"><a href="/admin-home">Site Logo</a></li>
                 <li class="about"><a href="/cikis">Çıkış Yap</a></li>
             </ul>
          </div>
          <div class="center-area">
             <div class="global-pages">
-                <a href="/kullanici-raporlari"><div class="global-pages-title">Kullanıcı Raporları</div></a>
-                <div class="global-pages-div"><a href="/online-kullanicilar">Online Kullanıcılar</a>
-                <div class="global-pages-div-right"><a href="/online-kullanicilar">1</a></div>
-                </div>
-              <div class="global-pages-div"><a href="/tum-kullanicilar">Tüm Kullanıcılar</a>
-              <div class="global-pages-div-right"><a href="/tum-kullanicilar">5</a></div>
-              </div>
+                <a href="/tum-envanterler"><div class="global-pages-title">Tüm Envanterler</div></a>
+                <a href="#"><div class="global-pages-div">Envanter - 1</div></a>
+                <a href="#"><div class="global-pages-div">Envanter - 2</div></a>
+                <a href="#"><div class="global-pages-div">Envanter - 3</div></a>
+                <a href="#"><div class="global-pages-div">Envanter - 4</div></a>
+                <a href="#"><div class="global-pages-div">Envanter - 5</div></a>
             </div>
          </div>
           <div class="clear"></div>
