--- a/views/kategori-listele.hbs
+++ b/views/kategori-listele.hbs
@@ -4,23 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/fontawesome/css/all.css">
     <title>Kategori Listele</title>
-     <link rel="stylesheet" href="assets/css/style-2.css">
 </head>
 <body>
-     <div class="container">
+    <div class="container">
       <div class="header">
-        <div class="nav">
+          <div class="nav">
             <ul>
-                <li class="home"><a href="/site-ayarlari">Ayarlara Geri Dön</a></li>
-                <li class="tutorials"><a href="/user-home">Site Logo</a></li>
+                <li class="home"><a href="/kategori-ayarlari">Kategori Ayarlarına geri dön</a></li>
+                <li class="tutorials"><a href="/admin-home">Site Logo</a></li>
                 <li class="about"><a href="/cikis">Çıkış Yap</a></li>
             </ul>
          </div>
          <div class="center-area">
-                 <a href="#"><div class="ist">Kategori 1 <div class="cop"><img width="25" height="25" src="assets/img/denied.png" /><div class="cop"><img width="25" height="25" src="assets/img/edt.jpg" /><div class="cop"><img width="25" height="25" src="assets/img/cop.jpg" /></div></div></div></div></a>
-                 <a href="#"><div class="ist">Kategori 2  <div class="cop"><img width="25" height="25" src="assets/img/approved.png" /><div class="cop"><img width="25" height="25" src="assets/img/edt.jpg" /><div class="cop"><img width="25" height="25" src="assets/img/cop.jpg" /></div></div></div></div></a>
-                 <a href="#"><div class="ist">Kategori 3<div class="cop"><img width="25" height="25" src="assets/img/approved.png" /><div class="cop"><img width="25" height="25" src="assets/img/edt.jpg" /><div class="cop"><img width="25" height="25" src="assets/img/cop.jpg" /></div></div></div></div></a>
+            <div class="global-pages">
+                <a href="/kategori-listele"><div class="global-pages-title">Kategori Listesi</div></a>
+                <div class="global-pages-div"><a href="#">Kategori - 1</a>
+                    <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/delete.png" alt=""></a></div>
+                    <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/edit.png" alt=""></a></div>
+                </div>
+                <div class="global-pages-div"><a href="#">Kategori - 2</a>
+                    <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/delete.png" alt=""></a></div>
+                    <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/edit.png" alt=""></a></div>
+                </div>
+                <div class="global-pages-div"><a href="#">Kategori - 3</a>
+                    <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/delete.png" alt=""></a></div>
+                    <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/edit.png" alt=""></a></div>
+                </div>
+                <div class="global-pages-div"><a href="#">Kategori - 4</a>
+                    <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/delete.png" alt=""></a></div>
+                    <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/edit.png" alt=""></a></div>
+                </div>
+                <div class="global-pages-div"><a href="#">Kategori - 5</a>
+                    <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/delete.png" alt=""></a></div>
+                    <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/edit.png" alt=""></a></div>
+                </div>
+              </div>
+            </div>
          </div>
+          <div class="clear"></div>
+         <div class="footer">&copy; Copyrights - 2019 | IntTechProje </div>
+      </div>  
+    </div>
 </body>
 </html>
