--- a/views/raporlar.hbs
+++ b/views/raporlar.hbs
@@ -21,7 +21,7 @@
          <div class="center-area">
             <div class="global-pages">
                 <div class="global-pages-div"><a href="/kullanici-raporlari">Kullanıcı Raporları</a>
-                    <div class="global-pages-div-img"><a href="/kullanici-raporlarir"><img src="assets/img/leftArrow.png" alt=""></a></div>
+                    <div class="global-pages-div-img"><a href="/kullanici-raporlari"><img src="assets/img/leftArrow.png" alt=""></a></div>
                 </div>
                 <div class="global-pages-div"><a href="/envanter-raporlari">Envanter Raporları</a>
                     <div class="global-pages-div-img"><a href="/envanter-raporlari"><img src="assets/img/leftArrow.png" alt=""></a></div>
