--- a/views/sil.hbs
+++ b/views/sil.hbs
@@ -6,24 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.css">
-    <title>Kategori Ayarları</title>
+    <title>Sil </title>
 </head>
 <body>
     <div class="container">
       <div class="header">
           <div class="nav">
             <ul>
-                <li class="home"><a href="/site-ayarlari">Ayarlara geri dön</a></li>
-                <li class="tutorials"><a href="/admin-home">Site Logo</a></li>
-                <li class="about"><a href="/cikis">Çıkış Yap</a></li>
+                <li class="home"><a href="#"></a></li>
+                <li class="tutorials"><a href="#"></a></li>
+                <li class="about"><a href="#"></a></li>
             </ul>
          </div>
          <div class="center-area">
-            <div class="global-pages">
-                <a href="/kategori-ayarlari"><div class="global-pages-title">Kategori Ayarları</div></a>
-                <div class="global-pages-div"><a href="/kategori-olustur">Kategori Oluştur</a></div>
-              <div class="global-pages-div"><a href="/kategori-listele">Kategori Listele</a></div>
-              </div>
+            <div class="center-text">
+                 Başarıyla Silindi.... <br> geri dönmek için <a href="#">Tıklayınız</a>
             </div>
          </div>
           <div class="clear"></div>
